# python-segmenter

./: .gitignore  README.md  Taskfile.yaml  pre-commit-config.yaml  pyproject.toml  requirements.txt
tasks/: qa.yaml  setup.yaml  ui.yaml
